parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMILLAS
    COMILLASIMPLE
    CORCHETE_ABRE
    CORCHETE_CIERRA
    ESPBARRAINVERTIVA
    ESPCOMILLAS
    ESPCOMILLASIMPLE
    ESPLINEA
    ESPRETORNO
    ESPTAB
    NEW
    READ
    RETURN
    TOLOWER
    TOUPPER

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> variables
Rule 5     instruccion -> if
Rule 6     instruccion -> switch
Rule 7     instruccion -> while
Rule 8     instruccion -> for
Rule 9     instruccion -> print
Rule 10    instruccion -> break
Rule 11    instruccion -> main
Rule 12    instruccion -> funcion_void
Rule 13    instruccion -> llamada_fvoid
Rule 14    instruccion -> error PTCOMA
Rule 15    variables -> var IDENTIFICADOR finInstruccion
Rule 16    variables -> var IDENTIFICADOR IGUAL expresion finInstruccion
Rule 17    variables -> var IDENTIFICADOR IGUAL NULL finInstruccion
Rule 18    variables -> IDENTIFICADOR IGUAL expresion finInstruccion
Rule 19    variables -> IDENTIFICADOR IGUAL NULL finInstruccion
Rule 20    var -> VAR
Rule 21    variables -> IDENTIFICADOR INCREMENTO finInstruccion
Rule 22    variables -> IDENTIFICADOR DECREMENTO finInstruccion
Rule 23    if -> IF PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
Rule 24    if -> IF PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA ELSE LLAVE_ABRE instrucciones LLAVE_CIERRA
Rule 25    if -> IF PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA ELSE if
Rule 26    switch -> SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE listacases LLAVE_CIERRA
Rule 27    switch -> SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE listacases default LLAVE_CIERRA
Rule 28    switch -> SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE default LLAVE_CIERRA
Rule 29    listacases -> listacases case
Rule 30    listacases -> case
Rule 31    case -> CASE expresion DOSPUNTOS instrucciones
Rule 32    default -> DEFAULT DOSPUNTOS instrucciones
Rule 33    main -> MAIN PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
Rule 34    while -> WHILE PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
Rule 35    for -> FOR PARENTESIS_ABRE declaracionfor1 PTCOMA expresion PTCOMA actualizacion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
Rule 36    for -> FOR PARENTESIS_ABRE declaracionfor2 PTCOMA expresion PTCOMA actualizacion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
Rule 37    declaracionfor1 -> VAR IDENTIFICADOR IGUAL expresion
Rule 38    declaracionfor2 -> IDENTIFICADOR IGUAL expresion
Rule 39    actualizacion -> IDENTIFICADOR INCREMENTO
Rule 40    actualizacion -> IDENTIFICADOR DECREMENTO
Rule 41    actualizacion -> IDENTIFICADOR IGUAL expresion
Rule 42    llamada_fvoid -> IDENTIFICADOR PARENTESIS_ABRE PARENTESIS_CIERRA finInstruccion
Rule 43    llamada_fvoid -> IDENTIFICADOR PARENTESIS_ABRE parametros_llamada PARENTESIS_CIERRA finInstruccion
Rule 44    parametros_llamada -> parametros_llamada COMA parametro_llamada
Rule 45    parametros_llamada -> parametro_llamada
Rule 46    parametro_llamada -> expresion
Rule 47    funcion_void -> FUNC IDENTIFICADOR PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
Rule 48    funcion_void -> FUNC IDENTIFICADOR PARENTESIS_ABRE parametros PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
Rule 49    parametros -> parametros COMA parametro
Rule 50    parametros -> parametro
Rule 51    parametro -> INT IDENTIFICADOR
Rule 52    parametro -> STRING IDENTIFICADOR
Rule 53    parametro -> DOUBLE IDENTIFICADOR
Rule 54    parametro -> BOOLEAN IDENTIFICADOR
Rule 55    parametro -> CHAR IDENTIFICADOR
Rule 56    print -> PRINT PARENTESIS_ABRE expresion PARENTESIS_CIERRA finInstruccion
Rule 57    break -> BREAK finInstruccion
Rule 58    finInstruccion -> PTCOMA
Rule 59    finInstruccion -> <empty>
Rule 60    expresion -> expresion MAS expresion
Rule 61    expresion -> expresion MENOS expresion
Rule 62    expresion -> expresion POR expresion
Rule 63    expresion -> expresion DIV expresion
Rule 64    expresion -> expresion POT expresion
Rule 65    expresion -> expresion MODULO expresion
Rule 66    expresion -> expresion IGUALACION expresion
Rule 67    expresion -> expresion DIREFENCIACION expresion
Rule 68    expresion -> expresion MAYORQ expresion
Rule 69    expresion -> expresion MENORQ expresion
Rule 70    expresion -> expresion MAYORIGUAL expresion
Rule 71    expresion -> expresion MENORIGUAL expresion
Rule 72    expresion -> expresion OR expresion
Rule 73    expresion -> expresion AND expresion
Rule 74    expresion -> MENOS expresion
Rule 75    expresion -> NOT expresion
Rule 76    expresion -> IDENTIFICADOR INCREMENTO
Rule 77    expresion -> IDENTIFICADOR DECREMENTO
Rule 78    expresion -> PARENTESIS_ABRE expresion PARENTESIS_CIERRA
Rule 79    expresion -> ENTERO
Rule 80    expresion -> DECIMAL
Rule 81    expresion -> TRUE
Rule 82    expresion -> FALSE
Rule 83    expresion -> IDENTIFICADOR
Rule 84    expresion -> CADENA
Rule 85    expresion -> CHART

Terminals, with rules where they appear

AND                  : 73
BOOLEAN              : 54
BREAK                : 57
CADENA               : 84
CASE                 : 31
CHAR                 : 55
CHART                : 85
COMA                 : 44 49
COMILLAS             : 
COMILLASIMPLE        : 
CORCHETE_ABRE        : 
CORCHETE_CIERRA      : 
DECIMAL              : 80
DECREMENTO           : 22 40 77
DEFAULT              : 32
DIREFENCIACION       : 67
DIV                  : 63
DOSPUNTOS            : 31 32
DOUBLE               : 53
ELSE                 : 24 25
ENTERO               : 79
ESPBARRAINVERTIVA    : 
ESPCOMILLAS          : 
ESPCOMILLASIMPLE     : 
ESPLINEA             : 
ESPRETORNO           : 
ESPTAB               : 
FALSE                : 82
FOR                  : 35 36
FUNC                 : 47 48
IDENTIFICADOR        : 15 16 17 18 19 21 22 37 38 39 40 41 42 43 47 48 51 52 53 54 55 76 77 83
IF                   : 23 24 25
IGUAL                : 16 17 18 19 37 38 41
IGUALACION           : 66
INCREMENTO           : 21 39 76
INT                  : 51
LLAVE_ABRE           : 23 24 24 25 26 27 28 33 34 35 36 47 48
LLAVE_CIERRA         : 23 24 24 25 26 27 28 33 34 35 36 47 48
MAIN                 : 33
MAS                  : 60
MAYORIGUAL           : 70
MAYORQ               : 68
MENORIGUAL           : 71
MENORQ               : 69
MENOS                : 61 74
MODULO               : 65
NEW                  : 
NOT                  : 75
NULL                 : 17 19
OR                   : 72
PARENTESIS_ABRE      : 23 24 25 26 27 28 33 34 35 36 42 43 47 48 56 78
PARENTESIS_CIERRA    : 23 24 25 26 27 28 33 34 35 36 42 43 47 48 56 78
POR                  : 62
POT                  : 64
PRINT                : 56
PTCOMA               : 14 35 35 36 36 58
READ                 : 
RETURN               : 
STRING               : 52
SWITCH               : 26 27 28
TOLOWER              : 
TOUPPER              : 
TRUE                 : 81
VAR                  : 20 37
WHILE                : 34
error                : 14

Nonterminals, with rules where they appear

actualizacion        : 35 36
break                : 10
case                 : 29 30
declaracionfor1      : 35
declaracionfor2      : 36
default              : 27 28
expresion            : 16 18 23 24 25 26 27 28 31 34 35 36 37 38 41 46 56 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 75 78
finInstruccion       : 15 16 17 18 19 21 22 42 43 56 57
for                  : 8
funcion_void         : 12
if                   : 5 25
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 23 24 24 25 31 32 33 34 35 36 47 48
listacases           : 26 27 29
llamada_fvoid        : 13
main                 : 11
parametro            : 49 50
parametro_llamada    : 44 45
parametros           : 48 49
parametros_llamada   : 43 44
print                : 9
switch               : 6
var                  : 15 16 17
variables            : 4
while                : 7

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . variables
    (5) instruccion -> . if
    (6) instruccion -> . switch
    (7) instruccion -> . while
    (8) instruccion -> . for
    (9) instruccion -> . print
    (10) instruccion -> . break
    (11) instruccion -> . main
    (12) instruccion -> . funcion_void
    (13) instruccion -> . llamada_fvoid
    (14) instruccion -> . error PTCOMA
    (15) variables -> . var IDENTIFICADOR finInstruccion
    (16) variables -> . var IDENTIFICADOR IGUAL expresion finInstruccion
    (17) variables -> . var IDENTIFICADOR IGUAL NULL finInstruccion
    (18) variables -> . IDENTIFICADOR IGUAL expresion finInstruccion
    (19) variables -> . IDENTIFICADOR IGUAL NULL finInstruccion
    (21) variables -> . IDENTIFICADOR INCREMENTO finInstruccion
    (22) variables -> . IDENTIFICADOR DECREMENTO finInstruccion
    (23) if -> . IF PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (24) if -> . IF PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA ELSE LLAVE_ABRE instrucciones LLAVE_CIERRA
    (25) if -> . IF PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA ELSE if
    (26) switch -> . SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE listacases LLAVE_CIERRA
    (27) switch -> . SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE listacases default LLAVE_CIERRA
    (28) switch -> . SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE default LLAVE_CIERRA
    (34) while -> . WHILE PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (35) for -> . FOR PARENTESIS_ABRE declaracionfor1 PTCOMA expresion PTCOMA actualizacion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (36) for -> . FOR PARENTESIS_ABRE declaracionfor2 PTCOMA expresion PTCOMA actualizacion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (56) print -> . PRINT PARENTESIS_ABRE expresion PARENTESIS_CIERRA finInstruccion
    (57) break -> . BREAK finInstruccion
    (33) main -> . MAIN PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (47) funcion_void -> . FUNC IDENTIFICADOR PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (48) funcion_void -> . FUNC IDENTIFICADOR PARENTESIS_ABRE parametros PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (42) llamada_fvoid -> . IDENTIFICADOR PARENTESIS_ABRE PARENTESIS_CIERRA finInstruccion
    (43) llamada_fvoid -> . IDENTIFICADOR PARENTESIS_ABRE parametros_llamada PARENTESIS_CIERRA finInstruccion
    (20) var -> . VAR

    error           shift and go to state 14
    IDENTIFICADOR   shift and go to state 16
    IF              shift and go to state 17
    SWITCH          shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    PRINT           shift and go to state 21
    BREAK           shift and go to state 22
    MAIN            shift and go to state 23
    FUNC            shift and go to state 24
    VAR             shift and go to state 25

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    variables                      shift and go to state 4
    if                             shift and go to state 5
    switch                         shift and go to state 6
    while                          shift and go to state 7
    for                            shift and go to state 8
    print                          shift and go to state 9
    break                          shift and go to state 10
    main                           shift and go to state 11
    funcion_void                   shift and go to state 12
    llamada_fvoid                  shift and go to state 13
    var                            shift and go to state 15

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . variables
    (5) instruccion -> . if
    (6) instruccion -> . switch
    (7) instruccion -> . while
    (8) instruccion -> . for
    (9) instruccion -> . print
    (10) instruccion -> . break
    (11) instruccion -> . main
    (12) instruccion -> . funcion_void
    (13) instruccion -> . llamada_fvoid
    (14) instruccion -> . error PTCOMA
    (15) variables -> . var IDENTIFICADOR finInstruccion
    (16) variables -> . var IDENTIFICADOR IGUAL expresion finInstruccion
    (17) variables -> . var IDENTIFICADOR IGUAL NULL finInstruccion
    (18) variables -> . IDENTIFICADOR IGUAL expresion finInstruccion
    (19) variables -> . IDENTIFICADOR IGUAL NULL finInstruccion
    (21) variables -> . IDENTIFICADOR INCREMENTO finInstruccion
    (22) variables -> . IDENTIFICADOR DECREMENTO finInstruccion
    (23) if -> . IF PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (24) if -> . IF PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA ELSE LLAVE_ABRE instrucciones LLAVE_CIERRA
    (25) if -> . IF PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA ELSE if
    (26) switch -> . SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE listacases LLAVE_CIERRA
    (27) switch -> . SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE listacases default LLAVE_CIERRA
    (28) switch -> . SWITCH PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE default LLAVE_CIERRA
    (34) while -> . WHILE PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (35) for -> . FOR PARENTESIS_ABRE declaracionfor1 PTCOMA expresion PTCOMA actualizacion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (36) for -> . FOR PARENTESIS_ABRE declaracionfor2 PTCOMA expresion PTCOMA actualizacion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (56) print -> . PRINT PARENTESIS_ABRE expresion PARENTESIS_CIERRA finInstruccion
    (57) break -> . BREAK finInstruccion
    (33) main -> . MAIN PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (47) funcion_void -> . FUNC IDENTIFICADOR PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (48) funcion_void -> . FUNC IDENTIFICADOR PARENTESIS_ABRE parametros PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (42) llamada_fvoid -> . IDENTIFICADOR PARENTESIS_ABRE PARENTESIS_CIERRA finInstruccion
    (43) llamada_fvoid -> . IDENTIFICADOR PARENTESIS_ABRE parametros_llamada PARENTESIS_CIERRA finInstruccion
    (20) var -> . VAR

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 14
    IDENTIFICADOR   shift and go to state 16
    IF              shift and go to state 17
    SWITCH          shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    PRINT           shift and go to state 21
    BREAK           shift and go to state 22
    MAIN            shift and go to state 23
    FUNC            shift and go to state 24
    VAR             shift and go to state 25

    instruccion                    shift and go to state 26
    variables                      shift and go to state 4
    if                             shift and go to state 5
    switch                         shift and go to state 6
    while                          shift and go to state 7
    for                            shift and go to state 8
    print                          shift and go to state 9
    break                          shift and go to state 10
    main                           shift and go to state 11
    funcion_void                   shift and go to state 12
    llamada_fvoid                  shift and go to state 13
    var                            shift and go to state 15

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    IDENTIFICADOR   reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    SWITCH          reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    MAIN            reduce using rule 3 (instrucciones -> instruccion .)
    FUNC            reduce using rule 3 (instrucciones -> instruccion .)
    VAR             reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVE_CIERRA    reduce using rule 3 (instrucciones -> instruccion .)
    DEFAULT         reduce using rule 3 (instrucciones -> instruccion .)
    CASE            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> variables .

    error           reduce using rule 4 (instruccion -> variables .)
    IDENTIFICADOR   reduce using rule 4 (instruccion -> variables .)
    IF              reduce using rule 4 (instruccion -> variables .)
    SWITCH          reduce using rule 4 (instruccion -> variables .)
    WHILE           reduce using rule 4 (instruccion -> variables .)
    FOR             reduce using rule 4 (instruccion -> variables .)
    PRINT           reduce using rule 4 (instruccion -> variables .)
    BREAK           reduce using rule 4 (instruccion -> variables .)
    MAIN            reduce using rule 4 (instruccion -> variables .)
    FUNC            reduce using rule 4 (instruccion -> variables .)
    VAR             reduce using rule 4 (instruccion -> variables .)
    $end            reduce using rule 4 (instruccion -> variables .)
    LLAVE_CIERRA    reduce using rule 4 (instruccion -> variables .)
    DEFAULT         reduce using rule 4 (instruccion -> variables .)
    CASE            reduce using rule 4 (instruccion -> variables .)


state 5

    (5) instruccion -> if .

    error           reduce using rule 5 (instruccion -> if .)
    IDENTIFICADOR   reduce using rule 5 (instruccion -> if .)
    IF              reduce using rule 5 (instruccion -> if .)
    SWITCH          reduce using rule 5 (instruccion -> if .)
    WHILE           reduce using rule 5 (instruccion -> if .)
    FOR             reduce using rule 5 (instruccion -> if .)
    PRINT           reduce using rule 5 (instruccion -> if .)
    BREAK           reduce using rule 5 (instruccion -> if .)
    MAIN            reduce using rule 5 (instruccion -> if .)
    FUNC            reduce using rule 5 (instruccion -> if .)
    VAR             reduce using rule 5 (instruccion -> if .)
    $end            reduce using rule 5 (instruccion -> if .)
    LLAVE_CIERRA    reduce using rule 5 (instruccion -> if .)
    DEFAULT         reduce using rule 5 (instruccion -> if .)
    CASE            reduce using rule 5 (instruccion -> if .)


state 6

    (6) instruccion -> switch .

    error           reduce using rule 6 (instruccion -> switch .)
    IDENTIFICADOR   reduce using rule 6 (instruccion -> switch .)
    IF              reduce using rule 6 (instruccion -> switch .)
    SWITCH          reduce using rule 6 (instruccion -> switch .)
    WHILE           reduce using rule 6 (instruccion -> switch .)
    FOR             reduce using rule 6 (instruccion -> switch .)
    PRINT           reduce using rule 6 (instruccion -> switch .)
    BREAK           reduce using rule 6 (instruccion -> switch .)
    MAIN            reduce using rule 6 (instruccion -> switch .)
    FUNC            reduce using rule 6 (instruccion -> switch .)
    VAR             reduce using rule 6 (instruccion -> switch .)
    $end            reduce using rule 6 (instruccion -> switch .)
    LLAVE_CIERRA    reduce using rule 6 (instruccion -> switch .)
    DEFAULT         reduce using rule 6 (instruccion -> switch .)
    CASE            reduce using rule 6 (instruccion -> switch .)


state 7

    (7) instruccion -> while .

    error           reduce using rule 7 (instruccion -> while .)
    IDENTIFICADOR   reduce using rule 7 (instruccion -> while .)
    IF              reduce using rule 7 (instruccion -> while .)
    SWITCH          reduce using rule 7 (instruccion -> while .)
    WHILE           reduce using rule 7 (instruccion -> while .)
    FOR             reduce using rule 7 (instruccion -> while .)
    PRINT           reduce using rule 7 (instruccion -> while .)
    BREAK           reduce using rule 7 (instruccion -> while .)
    MAIN            reduce using rule 7 (instruccion -> while .)
    FUNC            reduce using rule 7 (instruccion -> while .)
    VAR             reduce using rule 7 (instruccion -> while .)
    $end            reduce using rule 7 (instruccion -> while .)
    LLAVE_CIERRA    reduce using rule 7 (instruccion -> while .)
    DEFAULT         reduce using rule 7 (instruccion -> while .)
    CASE            reduce using rule 7 (instruccion -> while .)


state 8

    (8) instruccion -> for .

    error           reduce using rule 8 (instruccion -> for .)
    IDENTIFICADOR   reduce using rule 8 (instruccion -> for .)
    IF              reduce using rule 8 (instruccion -> for .)
    SWITCH          reduce using rule 8 (instruccion -> for .)
    WHILE           reduce using rule 8 (instruccion -> for .)
    FOR             reduce using rule 8 (instruccion -> for .)
    PRINT           reduce using rule 8 (instruccion -> for .)
    BREAK           reduce using rule 8 (instruccion -> for .)
    MAIN            reduce using rule 8 (instruccion -> for .)
    FUNC            reduce using rule 8 (instruccion -> for .)
    VAR             reduce using rule 8 (instruccion -> for .)
    $end            reduce using rule 8 (instruccion -> for .)
    LLAVE_CIERRA    reduce using rule 8 (instruccion -> for .)
    DEFAULT         reduce using rule 8 (instruccion -> for .)
    CASE            reduce using rule 8 (instruccion -> for .)


state 9

    (9) instruccion -> print .

    error           reduce using rule 9 (instruccion -> print .)
    IDENTIFICADOR   reduce using rule 9 (instruccion -> print .)
    IF              reduce using rule 9 (instruccion -> print .)
    SWITCH          reduce using rule 9 (instruccion -> print .)
    WHILE           reduce using rule 9 (instruccion -> print .)
    FOR             reduce using rule 9 (instruccion -> print .)
    PRINT           reduce using rule 9 (instruccion -> print .)
    BREAK           reduce using rule 9 (instruccion -> print .)
    MAIN            reduce using rule 9 (instruccion -> print .)
    FUNC            reduce using rule 9 (instruccion -> print .)
    VAR             reduce using rule 9 (instruccion -> print .)
    $end            reduce using rule 9 (instruccion -> print .)
    LLAVE_CIERRA    reduce using rule 9 (instruccion -> print .)
    DEFAULT         reduce using rule 9 (instruccion -> print .)
    CASE            reduce using rule 9 (instruccion -> print .)


state 10

    (10) instruccion -> break .

    error           reduce using rule 10 (instruccion -> break .)
    IDENTIFICADOR   reduce using rule 10 (instruccion -> break .)
    IF              reduce using rule 10 (instruccion -> break .)
    SWITCH          reduce using rule 10 (instruccion -> break .)
    WHILE           reduce using rule 10 (instruccion -> break .)
    FOR             reduce using rule 10 (instruccion -> break .)
    PRINT           reduce using rule 10 (instruccion -> break .)
    BREAK           reduce using rule 10 (instruccion -> break .)
    MAIN            reduce using rule 10 (instruccion -> break .)
    FUNC            reduce using rule 10 (instruccion -> break .)
    VAR             reduce using rule 10 (instruccion -> break .)
    $end            reduce using rule 10 (instruccion -> break .)
    LLAVE_CIERRA    reduce using rule 10 (instruccion -> break .)
    DEFAULT         reduce using rule 10 (instruccion -> break .)
    CASE            reduce using rule 10 (instruccion -> break .)


state 11

    (11) instruccion -> main .

    error           reduce using rule 11 (instruccion -> main .)
    IDENTIFICADOR   reduce using rule 11 (instruccion -> main .)
    IF              reduce using rule 11 (instruccion -> main .)
    SWITCH          reduce using rule 11 (instruccion -> main .)
    WHILE           reduce using rule 11 (instruccion -> main .)
    FOR             reduce using rule 11 (instruccion -> main .)
    PRINT           reduce using rule 11 (instruccion -> main .)
    BREAK           reduce using rule 11 (instruccion -> main .)
    MAIN            reduce using rule 11 (instruccion -> main .)
    FUNC            reduce using rule 11 (instruccion -> main .)
    VAR             reduce using rule 11 (instruccion -> main .)
    $end            reduce using rule 11 (instruccion -> main .)
    LLAVE_CIERRA    reduce using rule 11 (instruccion -> main .)
    DEFAULT         reduce using rule 11 (instruccion -> main .)
    CASE            reduce using rule 11 (instruccion -> main .)


state 12

    (12) instruccion -> funcion_void .

    error           reduce using rule 12 (instruccion -> funcion_void .)
    IDENTIFICADOR   reduce using rule 12 (instruccion -> funcion_void .)
    IF              reduce using rule 12 (instruccion -> funcion_void .)
    SWITCH          reduce using rule 12 (instruccion -> funcion_void .)
    WHILE           reduce using rule 12 (instruccion -> funcion_void .)
    FOR             reduce using rule 12 (instruccion -> funcion_void .)
    PRINT           reduce using rule 12 (instruccion -> funcion_void .)
    BREAK           reduce using rule 12 (instruccion -> funcion_void .)
    MAIN            reduce using rule 12 (instruccion -> funcion_void .)
    FUNC            reduce using rule 12 (instruccion -> funcion_void .)
    VAR             reduce using rule 12 (instruccion -> funcion_void .)
    $end            reduce using rule 12 (instruccion -> funcion_void .)
    LLAVE_CIERRA    reduce using rule 12 (instruccion -> funcion_void .)
    DEFAULT         reduce using rule 12 (instruccion -> funcion_void .)
    CASE            reduce using rule 12 (instruccion -> funcion_void .)


state 13

    (13) instruccion -> llamada_fvoid .

    error           reduce using rule 13 (instruccion -> llamada_fvoid .)
    IDENTIFICADOR   reduce using rule 13 (instruccion -> llamada_fvoid .)
    IF              reduce using rule 13 (instruccion -> llamada_fvoid .)
    SWITCH          reduce using rule 13 (instruccion -> llamada_fvoid .)
    WHILE           reduce using rule 13 (instruccion -> llamada_fvoid .)
    FOR             reduce using rule 13 (instruccion -> llamada_fvoid .)
    PRINT           reduce using rule 13 (instruccion -> llamada_fvoid .)
    BREAK           reduce using rule 13 (instruccion -> llamada_fvoid .)
    MAIN            reduce using rule 13 (instruccion -> llamada_fvoid .)
    FUNC            reduce using rule 13 (instruccion -> llamada_fvoid .)
    VAR             reduce using rule 13 (instruccion -> llamada_fvoid .)
    $end            reduce using rule 13 (instruccion -> llamada_fvoid .)
    LLAVE_CIERRA    reduce using rule 13 (instruccion -> llamada_fvoid .)
    DEFAULT         reduce using rule 13 (instruccion -> llamada_fvoid .)
    CASE            reduce using rule 13 (instruccion -> llamada_fvoid .)


state 14

    (14) instruccion -> error . PTCOMA

    PTCOMA          shift and go to state 27


state 15

    (15) variables -> var . IDENTIFICADOR finInstruccion
    (16) variables -> var . IDENTIFICADOR IGUAL expresion finInstruccion
    (17) variables -> var . IDENTIFICADOR IGUAL NULL finInstruccion

    IDENTIFICADOR   shift and go to state 28


state 16

    (18) variables -> IDENTIFICADOR . IGUAL expresion finInstruccion
    (19) variables -> IDENTIFICADOR . IGUAL NULL finInstruccion
    (21) variables -> IDENTIFICADOR . INCREMENTO finInstruccion
    (22) variables -> IDENTIFICADOR . DECREMENTO finInstruccion
    (42) llamada_fvoid -> IDENTIFICADOR . PARENTESIS_ABRE PARENTESIS_CIERRA finInstruccion
    (43) llamada_fvoid -> IDENTIFICADOR . PARENTESIS_ABRE parametros_llamada PARENTESIS_CIERRA finInstruccion

    IGUAL           shift and go to state 29
    INCREMENTO      shift and go to state 30
    DECREMENTO      shift and go to state 31
    PARENTESIS_ABRE shift and go to state 32


state 17

    (23) if -> IF . PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (24) if -> IF . PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA ELSE LLAVE_ABRE instrucciones LLAVE_CIERRA
    (25) if -> IF . PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA ELSE if

    PARENTESIS_ABRE shift and go to state 33


state 18

    (26) switch -> SWITCH . PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE listacases LLAVE_CIERRA
    (27) switch -> SWITCH . PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE listacases default LLAVE_CIERRA
    (28) switch -> SWITCH . PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE default LLAVE_CIERRA

    PARENTESIS_ABRE shift and go to state 34


state 19

    (34) while -> WHILE . PARENTESIS_ABRE expresion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA

    PARENTESIS_ABRE shift and go to state 35


state 20

    (35) for -> FOR . PARENTESIS_ABRE declaracionfor1 PTCOMA expresion PTCOMA actualizacion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA
    (36) for -> FOR . PARENTESIS_ABRE declaracionfor2 PTCOMA expresion PTCOMA actualizacion PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA

    PARENTESIS_ABRE shift and go to state 36


state 21

    (56) print -> PRINT . PARENTESIS_ABRE expresion PARENTESIS_CIERRA finInstruccion

    PARENTESIS_ABRE shift and go to state 37


state 22

    (57) break -> BREAK . finInstruccion
    (58) finInstruccion -> . PTCOMA
    (59) finInstruccion -> .

    PTCOMA          shift and go to state 39
    error           reduce using rule 59 (finInstruccion -> .)
    IDENTIFICADOR   reduce using rule 59 (finInstruccion -> .)
    IF              reduce using rule 59 (finInstruccion -> .)
    SWITCH          reduce using rule 59 (finInstruccion -> .)
    WHILE           reduce using rule 59 (finInstruccion -> .)
    FOR             reduce using rule 59 (finInstruccion -> .)
    PRINT           reduce using rule 59 (finInstruccion -> .)
    BREAK           reduce using rule 59 (finInstruccion -> .)
    MAIN            reduce using rule 59 (finInstruccion -> .)
    FUNC            reduce using rule 59 (finInstruccion -> .)
    VAR             reduce using rule 59 (finInstruccion -> .)
    $end            reduce using rule 59 (finInstruccion -> .)
    LLAVE_CIERRA    reduce using rule 59 (finInstruccion -> .)
    DEFAULT         reduce using rule 59 (finInstruccion -> .)
    CASE            reduce using rule 59 (finInstruccion -> .)

    finInstruccion                 shift and go to state 38

state 23

    (33) main -> MAIN . PARENTESIS_ABRE PARENTESIS_CIERRA LLAVE_ABRE instrucciones LLAVE_CIERRA

    PARENTESIS_ABRE shift and go to state 40


state 24
